--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster|Raleway');
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.navButton {
+  font-family: 'Raleway';
+  width: 100px;
+  float: right;
+  margin: 20px;
+  color: white;
+}
+
+.navButton:hover {
+  transition: all ease-in-out 300ms;
+  -webkit-transform: scale(1.3);
 }
