--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,11 @@ body {
   padding: 0 40px;
   float: right;
   color: black;
+  text-decoration: none;
 }
 
 .navButton:hover {
   transition: all ease-in-out 300ms;
   -webkit-transform: scale(1.3);
+  text-decoration: none;
 }
