--- a/src/index.css
+++ b/src/index.css
@@ -1,60 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=Lobster|Raleway");
 body {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-#logo {
-  padding: 10px;
-}
-
-.parallax {
-  /* The image used */
-  background-image: url("./images/village.jpg");
-
-  /* Set a specific height */
-  min-height: 700px;
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* .content {
-  top: 0;
-  left: 0;
-  right: 0;
-  width: "1070px";
-  height: "100vh";
-  position: "fixed";
-  margin: "0 auto";
-  background-color: "#F5F5F5";
-  z-index: -1;
-} */
-
-#avatar {
-  height: 400px;
-  padding-top: 20px;
-  border-radius: 50px;
-}
-
-.navButton {
-  position: relative;
-  font-family: "Raleway";
-  font-size: 25px;
-  min-width: 20px;
-  top: -50px;
-  padding: 0 40px;
-  float: right;
-  color: black;
-  text-decoration: none;
-}
-
-.navButton:hover {
-  transition: all ease-in-out 300ms;
-  -webkit-transform: scale(1.3);
-  text-decoration: none;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
